--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@solana/buffer-layout-utils": "^0.2.0",
+    "@solana/spl-token": "^0.3.11",
     "@solana/web3.js": "^1.89.1",
+    "buffer-layout": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
