--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@solana/buffer-layout-utils": "^0.2.0",
     "@solana/spl-token": "^0.3.11",
     "@solana/web3.js": "^1.89.1",
+    "buffer": "^6.0.3",
     "buffer-layout": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
